[backend] error handling
